# MemRW2

./: .gitignore  CMakeLists.txt  LICENSE  Mermaid.md  README.md  main.cpp
App/FluentUI/: fluentuiplugin_qml_module_dir_map.qrc  plugins.qmltypes
App/FluentUI/i18n/: fluentui_zh_CN.qm
DwarfCpp/: Attr.cpp  Attr.h  CMakeLists.txt  Die.cpp  Die.h  Dwarf.cpp  Dwarf.h  Dwarf.hpp  Helper.cpp  Helper.hpp  TypeDie.cpp  TypeDie.hpp  Utils.cpp  Utils.h  VariDie.cpp  VariDie.hpp  VariTree.cpp  VariTree.hpp
Qml/: ControlBar.qml  DockSystem.qml  LineDialog.qml  Main.qml  StateBar.qml  ToolBar.qml  ToolBar.qml.autosave  VariWindow.qml
Qml/ChartPlugin/: ChartBar.qml  ChartPlugin.qml  ExChart.qml  LineDialog.qml  LineListView.qml
Qml/Module/: BasicChart.qml  ControlBar.qml  ExChart.qml  LineListView.qml  StateBar.qml  TimeAxisControlBar.qml
Qml/TablePlugin/: ExTableView.qml
Src/Backend/: Backend.cpp  Backend.hpp  DisplayPluginInterface.cpp  DisplayPluginInterface.hpp  VariComponent.cpp  VariComponent.hpp
Src/ExChartView/: ExChartView.cpp  ExChartView.hpp  LineAttrModel.cpp  LineAttrModel.hpp
Src/ExTable/: ExTableModel.cpp  ExTableModel.h
Src/Line/: ChartLine.cpp  ChartLine.hpp  LineGroupModel.cpp  LineGroupModel.hpp  LineModel.cpp  LineModel.hpp
Src/UIComponent/: CircularReveal.cpp  CircularReveal.h
Src/USBInterface/: DAPReader.cpp  DAPReader.h  SWReg.h  USBBulk.cpp  USBBulk.h  USBDevDesc.cpp  USBDevDesc.h  main_task.cpp
Src/VariMap/: DisplayPluginInterface.cpp  DisplayPluginInterface.hpp  VariComponent.cpp  VariComponent.hpp  VariMap.cpp  VariMap.hpp
Src/Variable/: GetVariTree.cpp  GetVariTree.hpp  TreeModel.cpp  TreeModel.hpp
